--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.14",
     "node-sass": "^4.12.0",
+    "npmvet": "^0.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
