--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "treeize": "^2.1.2",
+    "winston": "^3.2.1",
     "xss": "^1.0.6"
   },
   "devDependencies": {
