--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJS project for Numerology Chart App",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --require db/test/setup.js",
+    "test": "mocha --require \"db/test/setup.js\"",
     "dev": "nodemon db/src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
