--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.14",
+    "material-kit-react": "^1.7.0",
     "node-sass": "^4.12.0",
     "npmvet": "^0.1.5",
     "react": "^16.8.6",
