--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "deploy": "git push heroku master"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.15.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
