--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "mocha --require \"db/test/setup.js\"",
     "dev": "nodemon db/src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate-production": "postgrator --config postgrator-production-config.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node db/src/server.js",
     "client": "node start-client.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate-production",
     "deploy": "git push heroku master"
   },
   "keywords": [],
