--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "engines": {
     "node": "10.15.1"
   },
-  "author": "",
+  "author": "matrayu",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
