Updated version to 1.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "numerology-server",
-  "version": "0.0.1",
-  "description": "NodeJS project for Numerology Chart App",
+  "version": "0.1.1",
+  "description": "NodeJS project for Simple Numerology App",
   "main": "app.js",
   "scripts": {
     "test": "mocha --require \"db/test/setup.js\"",
