--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@testing-library/react": "^9.1.2",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
@@ -12,6 +13,7 @@
     "node-sass": "^4.12.0",
     "npmvet": "^0.1.5",
     "react": "^16.8.6",
+    "react-context": "0.0.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0"
   }
 }
