--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database travis_ci_test;' -U matrayu
