--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'create database travis_ci_test;' -U matrayu
+  - psql -c "CREATE USER;" -U matrayu
+  - psql -c "CREATE DATABASE" numerology_test;' -U matrayu
