--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 
 before_script:
   - psql -c "CREATE USER;" -U matrayu
-  - psql -c "CREATE DATABASE" numerology_test;' -U matrayu
+  - psql -c "CREATE DATABASE numerology_test;" -U matrayu
