--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_script:
   
   - psql -c 'CREATE DATABASE numerology_test;' -U matrayu
-  - psql -c 'CREATE USER matrayu;''
+  - psql -c 'CREATE USER matrayu;'
