--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ services:
   - postgresql
 
 before_script:
-  
-  - psql -c 'CREATE DATABASE numerology_test;' -U matrayu
-  - psql -c 'CREATE USER matrayu;'
+  - psql -c "CREATE DATABASE testing_db;" -U postgres
+  - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
