--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_script:
   - psql -c "CREATE DATABASE numerology_test;" -U postgres
   - psql -c "CREATE USER matrayu WITH PASSWORD 'bar';" -U postgres
-  - psql -c "CREATE TABLE users;" -U postgres
+  - psql -c "CREATE TABLE users (id SERIAL PRIMARY KEY);" -U postgres
